<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/backgroundbmw3"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginTextView"
            android:textSize="25sp"
            android:id="@+id/textViewLogin"
            android:textColor="@color/white"
            android:fontFamily="@font/exo2_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="152dp"
            app:layout_constraintHorizontal_bias="0.50"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userTextField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:fontFamily="@font/exo2_regular"
            app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userTextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/exo2_regular"
                android:background="@drawable/rounded_edittext_background"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:fontFamily="@font/exo2_regular"
            app:layout_constraintTop_toBottomOf="@+id/userTextField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:fontFamily="@font/exo2_regular"
                android:background="@drawable/rounded_edittext_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/botonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginBoton"
            android:fontFamily="@font/exo2_bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/botones"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoRegistrarse"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="@font/exo2_regular"
            android:id="@+id/registrarseTextView"
            app:layout_constraintTop_toBottomOf="@+id/botonLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="90dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:id="@+id/botonRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:fontFamily="@font/exo2_bold"
            android:backgroundTint="@color/botones"
            app:layout_constraintTop_toBottomOf="@+id/registrarseTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
    />

    <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/facebook_foreground"
            android:id="@+id/btnFacebook"
            android:contentDescription="@string/facebook_button_description"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintTop_toBottomOf="@+id/botonLogin"
            android:layout_marginTop="20dp"/>

    <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/google_foreground"
            android:id="@+id/btnGoogle"
            android:contentDescription="@string/google_button_description"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.70"
            app:layout_constraintTop_toBottomOf="@+id/botonLogin"
            android:layout_marginTop="20dp"/>

    <ImageView
            android:src="@drawable/mperfomancelogo"
            android:layout_width="116dp"
            android:layout_height="86dp"
            android:id="@+id/imageViewMPerfomanceLogo"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintVertical_bias="1.25"/>

    <ImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/bmwlogo"
            android:id="@+id/imageViewBMWLogo"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@+id/botonRegistrarse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="0.75"/>

    <TextView
            android:text="@string/textoPoweredBy"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPoweredBy"
            android:fontFamily="@font/exo2_regular"
            app:layout_constraintTop_toBottomOf="@+id/botonRegistrarse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewBMWLogo"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintVertical_bias="0.70"/>

    <TextView
            android:text="@string/contrasenaOlvidadaTexto"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textContrasenaOlvidada"
            android:fontFamily="@font/exo2_regular"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.150"
            app:layout_constraintVertical_bias="0.030"/>

</androidx.constraintlayout.widget.ConstraintLayout>
