<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_layout"
        android:background="@drawable/rounded_item_background"
        android:layout_margin="20dp"
>

    <TextView
            android:text="@string/modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modelo"
            android:fontFamily="@font/exo2_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.3"
            android:textSize="20sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:text="@string/serie"
            android:layout_width="wrap_content"
            android:layout_height="246dp"
            android:id="@+id/serie"
            android:fontFamily="@font/exo2_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

    <TextView
            android:text="@string/cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cv"
            android:fontFamily="@font/exo2_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#FFFFFF"
            app:layout_constraintVertical_bias="0.07"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:backgroundTint="@color/botones"
            app:srcCompat="@drawable/fav_unselected"
            android:id="@+id/fab_fav"
            android:contentDescription="@string/fav"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv"
            app:layout_constraintVertical_bias="0.03"
            app:layout_constraintHorizontal_bias="0.65"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bmw_e46"
            android:id="@+id/foto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelo"
            app:layout_constraintVertical_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>